test: adicionado casos de testes para updateUser